pages/docs/manual/v8.0.0/pattern-matching-destructuring.mdx
---
title: "Pattern Matching / Destructuring"
description: "Pattern matching and destructuring complex data structures in ReScript"
canonical: "/docs/manual/latest/pattern-matching-destructuring"
---

# Pattern Matching / Destructuring

One of ReScript's **best** feature is our pattern matching. Pattern matching combines 3 brilliant features into one:

- Destructuring.
- `switch` based on shape of data.
- Exhaustiveness check.

We'll dive into each aspect below.

## Destructuring

Even JavaScript has destructuring, which is "opening up" a data structure to extract the parts we want and assign variable names to them:

<CodeTab labels={["Reason (Old Syntax)", "ML (Older Syntax)", "JS Output"]}>

```re
let coordinates = (10, 20, 30);
let (x, _, _) = coordinates;
Js.log(x); // 10
```

```ml
let coordinates = (10, 20, 30)
let (x, _, _) = coordinates
Js.log x (* 10 *)
```

```js
var coordinates = [10, 20, 30];
var x = 10;
console.log(10);
```

</CodeTab>

Destructuring works with most built-in data structures:

<CodeTab labels={["Reason (Old Syntax)", "ML (Older Syntax)", "JS Output"]}>

```re
// Record
type student = {name: string, age: int};
let student1 = {name: "John", age: 10};
let {name} = student1; // "John" assigned to `name`

// Variant
type result =
  | Success(string);
let myResult = Success("You did it!");
let Success(message) = myResult; // "You did it!" assigned to `message`

// Array
let myArray = [|1, 2, 3|];
let [|item1, item2, _|] = myArray; // 1 assigned to `item1`, 2 assigned to `item2`, 3rd item ignored

// List
let myList = [1, 2, 3];
let [head, ...tail] = myList; // 1 assigned to `head`, `[2, 3]` assigned to tail
```

```ml
// Record
type student = {name: string; age: int}
let student1 = {name = "John"; age = 10}
let {name} = student1; (* "John" assigned to `name` *)

(* Variant *)
type result =
  | Success of string
let myResult = Success "You did it!"
let Success message = myResult (* "You did it!" assigned to `message` *)

(* Array *)
let myArray = [|1; 2; 3|]
let [|item1; item2; _|] = myArray (* 1 assigned to `item1`, 2 assigned to `item2`, 3rd item ignored *)

(* List *)
let myList = [1; 2; 3]
let head::tail = myList (* 1 assigned to `head`, `[2, 3]` assigned to tail *)
```

```js
var student1 = {
  name: "John",
  age: 10,
};
var name = "John";

var myResult = /* Success */ {
  _0: "You did it!",
};
var message = "You did it!";

var myArray = [1, 2, 3];
if (myArray.length !== 2) {
  throw {
    RE_EXN_ID: "Match_failure",
    _1: ["playground.res", 14, 4],
    Error: new Error(),
  };
}
var item1 = myArray[0];
var item2 = myArray[1];

var myList = {
  hd: 1,
  tl: {
    hd: 2,
    tl: {
      hd: 3,
      tl: /* [] */ 0,
    },
  },
};
// ...
```

</CodeTab>

You can also use destructuring anywhere you'd usually put a binding:

<CodeTab labels={["Reason (Old Syntax)", "ML (Older Syntax)", "JS Output"]}>

```re
type result =
  | Success(string);
let displayMessage = (Success(m)) => {
  // we've directly extracted the success message
  // string by destructuring the parameter
  Js.log(m);
}
displayMessage(Success("You did it!"));
```

```ml
type result =
  | Success of string
let displayMessage (Success m) =
  (* we've directly extracted the success message *)
  (* string by destructuring the parameter *)
  Js.log m

let () = displayMessage (Success "You did it!")
```

```js
function displayMessage(m) {
  console.log(m._0);
}

displayMessage(
  /* Success */ {
    _0: "You did it!",
  },
);
```

</CodeTab>

For a record, you can rename the field while destructuring:

<CodeTab labels={["Reason (Old Syntax)", "ML (Older Syntax)", "JS Output"]}>

```re
let {name: n} = student1; // "John" assigned to `n`
```

```ml
let {name = n} = student1 (* "John" assigned to `n` *)
```

```js
var n = "John";
```

</CodeTab>

## `switch` Based on Shape of Data

While the destructuring aspect of pattern matching is nice, it doesn't really change the way you think about structuring your code. One paradigm-changing way of thinking about your code is to execute some code based on the shape of the data.

Consider a variant:

<CodeTab labels={["Reason (Old Syntax)", "ML (Older Syntax)", "JS Output"]}>

```re
type payload =
  | BadResult(int)
  | GoodResult(string)
  | NoResult;
```

```ml
type payload =
  | BadResult of int
  | GoodResult of string
  | NoResult
```

```js
// Empty output
```

</CodeTab>

We'd like to handle each of the 3 cases differently. For example, print a success message if the value is `GoodResult(...)`, do something else when the value is `NoResult`, etc.

In other languages, you'd end up with a series of if-elses that are hard to read and error-prone. In ReScript, you can instead use the supercharged `switch` pattern matching facility to destructure the value while calling the right code based on what you destructured:

<CodeTab labels={["Reason (Old Syntax)", "ML (Older Syntax)", "JS Output"]}>

```re
let data = GoodResult("Product shipped!");
switch (data) {
| GoodResult(theMessage) =>
  Js.log("Success! " ++ theMessage)
| BadResult(errorCode) =>
  Js.log("Something's wrong. The error code is: " ++ Js.Int.toString(errorCode))
| NoResult =>
  Js.log("Bah.")
};
```

```ml
let data = GoodResult ("Product shipped!")
let () = match data with
| GoodResult theMessage ->
  Js.log ("Success! " ^ theMessage)
| BadResult errorCode ->
  Js.log ("Something's wrong. The error code is: " ^ (Js.Int.toString errorCode))
| NoResult -> Js.log "Bah."
```

```js
var data = {
  TAG: /* GoodResult */ 1,
  _0: "Product shipped!",
};

if (typeof data === "number") {
  console.log("Bah.");
} else if (data.TAG) {
  console.log("Success! Product shipped!");
} else {
  console.log(
    "Something's wrong. The error code is: " + "Product shipped!".toString(),
  );
}
```

</CodeTab>

In this case, `message` will have the value `"Success! Product shipped!"`.

Suddenly, your if-elses that messily checks some structure of the value got turned into a clean, compiler-verified, linear list of code to execute based on exactly the shape of the value.

### Complex Examples

Here's a real-world scenario that'd be a headache to code in other languages. Given this data structure:

<CodeTab labels={["Reason (Old Syntax)", "ML (Older Syntax)", "JS Output"]}>

```re
type status = Vacations(int) | Sabbatical(int) | Sick | Present;
type reportCard = {passing: bool, gpa: float};
type person =
  | Teacher({
    name: string,
    age: int,
  })
  | Student({
    name: string,
    status: status,
    reportCard: reportCard,
  });
```

```ml
type status = Vacations of int | Sabbatical of int | Sick | Present
type reportCard = {passing: bool; gpa: float}
type person =
  | Teacher of {
    name: string;
    age: int;
  }
  | Student of {
    name: string;
    status: status;
    reportCard: reportCard;
  }
```

```js
// Empty output
```

</CodeTab>

Imagine this requirement:

- Informally greet a person who's a teacher and if his name is Mary or Joe.
- Greet other teachers formally.
- If the person's a student, congratulate him/her score if they passed the semester.
- If the student has a gpa of 0 and is on vacations or sabbatical, display a different message.
- A catch-all message for a student.

ReScript can do this easily!

<CodeTab labels={["Reason (Old Syntax)", "ML (Older Syntax)", "JS Output"]}>

```re
let message = switch (person1) {
| Teacher({name: "Mary" | "Joe"}) =>
  "Hey, still going to the party on Saturday?"
| Teacher({name}) =>
  // this is matched only if `name` isn't "Joe"
  {j|Hello $(name).|j}
| Student({name, reportCard: {passing: true, gpa}}) =>
  "Congrats " ++ name + ", nice GPA of " ++ Js.Float.toString(gpa) ++ " you got there!"
| Student({
    reportCard: {gpa: 0.0},
    status: Vacations(daysLeft) | Sabbatical(daysLeft)
  }) =>
  "Come back in " ++ Js.Int.toString(daysLeft) ++ " days!"
| Student({status: Sick}) =>
  "How are you feeling?"
| Student({name}) =>
  {j|Good luck next semester $(name)!|j}
};
```

```ml
let message = match person1 with
| Teacher {name = "Mary" | "Joe"} ->
  "Hey, still going to the party on Saturday?"
| Teacher {name} ->
  (* this is matched only if `name` isn't "Joe" *)
  {j|Hello $(name).|j}
| Student {name; reportCard = {passing = true; gpa}} ->
  "Congrats " ++ name + ", nice GPA of " ++ Js.Float.toString(gpa) ++ " you got there!"
| Student {
    reportCard = {gpa = 0.0};
    status = (Vacations daysLeft) | (Sabbatical daysLeft)
  } ->
  "Come back in " ++ (Js.Int.toString daysLeft) ++ " days!"
| Student {status = Sick} ->
  "How are you feeling?"
| Student {name} ->
  {j|Good luck next semester $(name)!|j}
```

```js
var message;

if (person1.TAG) {
  var match$1 = person1.status;
  var name = person1.name;
  var match$2 = person1.reportCard;
  message = match$2.passing
    ? "Congrats " +
      name +
      ", nice GPA of " +
      match$2.gpa.toString() +
      " you got there!"
    : typeof match$1 === "number"
      ? match$1 !== 0
        ? "Good luck next semester " + name + "!"
        : "How are you feeling?"
      : person1.reportCard.gpa !== 0.0
        ? "Good luck next semester " + name + "!"
        : "Come back in " + match$1._0.toString() + " days!";
} else {
  var name$1 = person1.name;
  switch (name$1) {
    case "Joe":
    case "Mary":
      message = "Hey, still going to the party on Saturday?";
      break;
    default:
      message = "Hello " + name$1 + ".";
  }
}
```

</CodeTab>

**Note** how we've:

- drilled deep down into the value concisely
- using a nested pattern check `"Mary" | "Joe"` and `Vacations | Sabbatical`
- while extracting the `daysLeft` number from the latter case
- and assigned the greeting to the binding `message`.

Here's another example of pattern matching, this time on an inline tuple.

<CodeTab labels={["Reason (Old Syntax)", "ML (Older Syntax)", "JS Output"]}>

```re
type animal = Dog | Cat | Bird;
let categoryId = switch (isBig, myAnimal) {
| (true, Dog) => 1
| (true, Cat) => 2
| (true, Bird) => 3
| (false, Dog | Cat) => 4
| (false, Bird) => 5
};
```

```ml
type animal = Dog | Cat | Bird
let categoryId = match (isBig, myAnimal) with
| (true, Dog) -> 1
| (true, Cat) -> 2
| (true, Bird) -> 3
| (false, (Dog | Cat)) -> 4
| (false, Bird) -> 5
```

```js
var categoryId = isBig ? (myAnimal + 1) | 0 : myAnimal >= 2 ? 5 : 4;
```

</CodeTab>

**Note** how pattern matching on a tuple is equivalent to a 2D table:

| isBig \ myAnimal | Dog | Cat | Bird |
| ---------------- | --- | --- | ---- |
| true             | 1   | 2   | 3    |
| false            | 4   | 4   | 5    |

### Ignore Part of a Value

If you have a value like `Teacher(payload)` where you just want to pattern match on the `Teacher` part and ignore the `payload` completely, you can use the `_` wildcard like this:

<CodeTab labels={["Reason (Old Syntax)", "ML (Older Syntax)", "JS Output"]}>

```re
switch (person) {
| Teacher(_) => Js.log("Hi teacher")
| Student(_) => Js.log("Hey student")
};
```

```ml
let () = match person with
| Teacher _ -> Js.log "Hi teacher"
| Student _ -> Js.log "Hey student"
```

```js
if (person.TAG) {
  console.log("Hey student");
} else {
  console.log("Hi teacher");
}
```

</CodeTab>

`_` also works at the top level of the pattern like `| _ => ...` if you want to execute catch-all condition.

### When Clause

Sometime, you want to check more than the shape of a value. You want to also run some arbitrary check on it. You might be tempted to write this:

<CodeTab labels={["Reason (Old Syntax)", "ML (Older Syntax)", "JS Output"]}>

```re
switch (person) {
| Teacher(_) => () // do nothing
| Student({reportCard: {gpa}}) =>
  if (gpa < 0.5) {
    Js.log("What's happening")
  } else {
    Js.log("Heyo")
  }
};
```

```ml
let () = match person with
| Teacher _ -> () (* do nothing *)
| Student {reportCard = {gpa}} ->
  if gpa < 0.5 then
    Js.log "What's happening"
  else
    Js.log "Heyo"
```

```js
if (person.TAG) {
  if (person.reportCard.gpa < 0.5) {
    console.log("What's happening");
  } else {
    console.log("Heyo");
  }
}
```

</CodeTab>

`switch` patterns support a shortcut for the arbitrary `if` check, to keep your pattern linear-looking:

<CodeTab labels={["Reason (Old Syntax)", "ML (Older Syntax)", "JS Output"]}>

```re
switch (person) {
| Teacher(_) => () // do nothing
| Student({reportCard: {gpa}}) when gpa < 0.5 =>
  Js.log("What's happening");
| Student(_) =>
  // fall-through, catch-all case
  Js.log("Heyo");
}
```

```ml
let () = match person with
| Teacher _ -> () (* do nothing *)
| Student {reportCard = {gpa}} when gpa < 0.5 ->
  Js.log "What's happening"
| Student _ ->
  (* fall-through, catch-all case *)
  Js.log "Heyo"
```

```js
if (person.TAG) {
  if (person.reportCard.gpa < 0.5) {
    console.log("What's happening");
  } else {
    console.log("Heyo");
  }
}
```

</CodeTab>

### Match on Exceptions

If the function throws an exception (covered later), you can also match on _that_, in addition to the function's normally returned values.

<CodeTab labels={["Reason (Old Syntax)", "ML (Older Syntax)", "JS Output"]}>

```re
switch (List.find(i => i === theItem, myItems)) {
| item => Js.log(item)
| exception Not_found => Js.log("No such item found!")
};
```

```ml
let () = match List.find (fun i -> i == theItem) myItems with
| item -> Js.log item
| exception Not_found -> Js.log "No such item found!"
```

```js
var exit = 0;

var item;

try {
  item = List.find(function (i) {
    return i === theItem;
  }, myItems);
  exit = 1;
} catch (raw_exn) {
  var exn = Caml_js_exceptions.internalToOCamlException(raw_exn);
  if (exn.RE_EXN_ID === "Not_found") {
    console.log("No such item found!");
  } else {
    throw exn;
  }
}

if (exit === 1) {
  console.log(item);
}
```

</CodeTab>

### Small Pitfall

**Note**: you can only pass literals (i.e. concrete values) as a pattern, not let-binding names or other things. The following doesn't work as expected:

<CodeTab labels={["Reason (Old Syntax)", "ML (Older Syntax)", "JS Output"]}>

```re
let coordinates = (10, 20, 30)
let centerY = 20
switch (coordinates) {
| (x, centerY, _) => /* code */
}
```

```ml
let coordinates = (10, 20, 30)
let centerY = 20
let () = match coordinates with
| (x, centerY, _) => (* code *)
```

```js
var coordinates = [10, 20, 30];
var centerY = 20;

console.log(10);
```

</CodeTab>

A first time ReScript user might accidentally write that code, assuming that it's matching on `coordinates` when the second value is of the same value as `centerY`. In reality, this is interpreted as matching on coordinates and assigning the second value of the tuple to the name `centerY`, which isn't what's intended.

## Exhaustiveness Check

As if the above features aren't enough, ReScript also provides arguably the most important pattern matching feature: **compile-time check of missing patterns**.

Let's revisit one of the above examples:

<CodeTab labels={["Reason (Old Syntax)", "ML (Older Syntax)", "JS Output"]}>

```re
let message = switch (person) {
| Teacher({name: "Mary" | "Joe"}) =>
  "Hey, still going to the party on Saturday?"
| Student({name, reportCard: {passing: true, gpa}}) =>
  "Congrats " ++ name ++ ", nice GPA of " ++ Js.Float.toString(gpa) ++ " you got there!"
| Student({
    reportCard: {gpa: 0.0},
    status: Vacations(daysLeft) | Sabbatical(daysLeft)
  }) =>
  "Come back in " ++ Js.Int.toString(daysLeft) ++ " days!"
| Student({status: Sick}) =>
  "How are you feeling?"
| Student({name}) =>
  "Good luck next semester " ++ name ++ "!"
}
```

```ml
let message = match person with
| Teacher {name = "Mary" | "Joe"} ->
  "Hey, still going to the party on Saturday?"
| Student {name; reportCard = {passing = true; gpa}} ->
  "Congrats " ^ name ^ ", nice GPA of " ^ (Js.Float.toString gpa) ^ " you got there!"
| Student {
    reportCard = {gpa = 0.0};
    status = (Vacations daysLeft) | (Sabbatical daysLeft)
  } ->
  "Come back in " ^ (Js.Int.toString daysLeft) ^ " days!"
| Student {status = Sick} ->
    "How are you feeling?"
| Student {name} ->
  "Good luck next semester "^ name ^ "!"
```

```js
if (person.TAG) {
  var match$1 = person.status;
  var name = person.name;
  var match$2 = person.reportCard;
  if (match$2.passing) {
    "Congrats " +
      name +
      ", nice GPA of " +
      match$2.gpa.toString() +
      " you got there!";
  } else if (typeof match$1 === "number") {
    if (match$1 !== 0) {
      "Good luck next semester " + name + "!";
    } else {
      ("How are you feeling?");
    }
  } else if (person.reportCard.gpa !== 0.0) {
    "Good luck next semester " + name + "!";
  } else {
    "Come back in " + match$1._0.toString() + " days!";
  }
} else {
  switch (person.name) {
    case "Joe":
    case "Mary":
      break;
    default:
      throw {
        RE_EXN_ID: "Match_failure",
        _1: ["playground.res", 13, 0],
        Error: new Error(),
      };
  }
}
```

</CodeTab>

Did you see what we removed? This time, we've omitted the handling of the case where `person` is `Teacher({name})` when `name` isn't Mary or Joe.

Failing to handle every scenario of a value likely constitutes the majority of program bugs out there. This happens very often when you refactor a piece of code someone else wrote. Fortunately for ReScript, the compiler will tell you so:

```
Warning 8: this pattern-matching is not exhaustive.
Here is an example of a value that is not matched:
Some({name: ""})
```

**BAM**! You've just erased an entire category of important bugs before you even ran the code. In fact, this is how most of nullable values is handled:

<CodeTab labels={["Reason (Old Syntax)", "ML (Older Syntax)", "JS Output"]}>

```re
switch (myNullableValue) {
| Some(v) => Js.log("value is present")
| None => Js.log("value is absent")
};
```

```ml
match myNullableValue with
| Some v -> Js.log "value is present"
| None -> Js.log "value is absent"
```

```js
if (myNullableValue !== undefined) {
  console.log("value is present");
} else {
  console.log("value is absent");
}
```

</CodeTab>

If you don't handle the `None` case, the compiler warns. No more `undefined` bugs in your code!

## Conclusion & Tips & Tricks

Hopefully you can see how pattern matching is a game changer for writing correct code, through the concise destructuring syntax, the proper conditions handling of `switch`, and the static exhaustiveness check.

Here are some advices.

Do not abuse the wildcard `_` too much. This prevents the compiler from giving you better exhaustiveness check, which would be especially important after a refactoring where you add a new case to a variant. Try only using `_` against infinite possibilities, e.g. string, int, etc.

Use `when` clause sparingly.

**Flatten your pattern-match whenever you can**. This is a real bug remover. Here's a series of examples, from worst to best:

<CodeTab labels={["Reason (Old Syntax)", "ML (Older Syntax)", "JS Output"]}>

```re
let optionBoolToBool = opt => {
  if (opt == None) {
    false
  } else if (opt === Some(true)) {
    true
  } else {
    false
  }
}
```

```ml
let optionBoolToBool opt =
  if opt = None
    then false
  else if opt == Some true then
    true
  else false
```

```js
function optionBoolToBool(opt) {
  if (opt === undefined) {
    return false;
  } else {
    return opt === true;
  }
}
```

</CodeTab>

Now that's just silly =). Let's turn it into pattern-matching:

<CodeTab labels={["Reason (Old Syntax)", "ML (Older Syntax)", "JS Output"]}>

```re
let optionBoolToBool = opt => {
  switch (opt) {
  | None => false
  | Some(a) => a ? true : false
  }
};
```

```ml
let optionBoolToBool opt =
  match opt with
  | None -> false
  | Some a -> if a then true else false
```

```js
function optionBoolToBool(opt) {
  if (opt !== undefined && opt) {
    return true;
  } else {
    return false;
  }
}
```

</CodeTab>

Slightly better, but still nested. Pattern-matching allows you to do this:

<CodeTab labels={["Reason (Old Syntax)", "ML (Older Syntax)", "JS Output"]}>

```re
let optionBoolToBool = opt => {
  switch (opt) {
  | None => false
  | Some(true) => true
  | Some(false) => false
  }
};
```

```ml
let optionBoolToBool opt =
  match opt with
  | None -> false
  | Some true -> true
  | Some false -> false
```

```js
function optionBoolToBool(opt) {
  if (opt !== undefined && opt) {
    return true;
  } else {
    return false;
  }
}
```

</CodeTab>

Much more linear-looking! Now, you might be tempted to do this:

<CodeTab labels={["Reason (Old Syntax)", "ML (Older Syntax)", "JS Output"]}>

```re
let optionBoolToBool = opt => {
  switch (opt) {
  | Some(true) => true
  | _ => false
  }
};
```

```ml
let optionBoolToBool opt =
  match opt with
  | Some true -> true
  | _ -> false
```

```js
function optionBoolToBool(opt) {
  if (opt !== undefined && opt) {
    return true;
  } else {
    return false;
  }
}
```

</CodeTab>

Which is much more concise, but kills the exhaustiveness check mentioned above; refrain from using that. This is the best:

<CodeTab labels={["Reason (Old Syntax)", "ML (Older Syntax)", "JS Output"]}>

```re
let optionBoolToBool opt =
  match opt with
  | Some trueOrFalse -> trueOrFalse
  | None -> false
```

```js
function optionBoolToBool(opt) {
  if (opt !== undefined) {
    return opt;
  } else {
    return false;
  }
}
```

</CodeTab>

Pretty darn hard to make a mistake in this code at this point! Whenever you'd like to use an if-else with many branches, prefer pattern matching instead. It's more concise and [performant](variant#design-decisions) too.
